--- a/templates/visit_obje.html
+++ b/templates/visit_obje.html
@@ -32,6 +32,7 @@
 </TR>
 {% endfor %}
 </TABLE>
+<A HREF="#" onClick='window.open("/graphs/vitals/{{p.id}}/","Vitals Graphs","menubar=no,width=780,height=540,toolbar=no,scrollbars=yes");'>Show Historical Graphs</A>
 </DIV> <!-- vitals -->
 <DIV ID=physicalExam>
 Add Exam Note:
