update static_media to be installed under the media directory.

--- a/templates/base_med.html
+++ b/templates/base_med.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 {% block extrahead %}
-<link href="/css/base_visit.css" rel="stylesheet" />
+<link href="/media/ocemr/css/base_visit.css" rel="stylesheet" />
 {% block medExtrahead %}{% endblock %}
 {% endblock %}
 {% block extraheader %}
