--- a/templates/diag_view.html
+++ b/templates/diag_view.html
@@ -1,7 +1,7 @@
 {% extends "base_popup.html" %}
 
 {% block extrahead %}
-<link href="/css/diag_view.css" rel="stylesheet" />
+<link href="/media/ocemr/css/diag_view.css" rel="stylesheet" />
 {% endblock %}
 
 {% block content %}
