--- a/templates/visit_refe.html
+++ b/templates/visit_refe.html
@@ -1,6 +1,6 @@
 {% extends "base_visit.html" %}
 {% block visitExtrahead %}
-<link href="/css/visit_refe.css" rel="stylesheet" />
+<link href="/media/ocemr/css/visit_refe.css" rel="stylesheet" />
 {% endblock %}
 {% block visitContent %}
 <A HREF="#" onClick='window.open("/visit/{{v.id}}/refe/new/","New Referral","menubar=no,width=540,height=420,toolbar=no,scrollbars=yes");'>Add a Referral</A>
