--- a/templates/visit_immu.html
+++ b/templates/visit_immu.html
@@ -1,6 +1,6 @@
 {% extends "base_visit.html" %}
 {% block visitExtrahead %}
-<link href="/css/visit_immu.css" rel="stylesheet" />
+<link href="/media/ocemr/css/visit_immu.css" rel="stylesheet" />
 {% endblock %}
 {% block visitContent %}
 <A HREF="#" onClick='window.open("/visit/{{v.id}}/immu/new/","New Immunization Log","menubar=no,width=540,height=420,toolbar=no,scrollbars=yes");'>Add an Immunization Log</A>
