--- a/templates/visit_labs.html
+++ b/templates/visit_labs.html
@@ -1,6 +1,6 @@
 {% extends "base_visit.html" %}
 {% block visitExtrahead %}
-<link href="/css/visit_labs.css" rel="stylesheet" />
+<link href="/media/ocemr/css/visit_labs.css" rel="stylesheet" />
 {% endblock %}
 {% block visitContent %}
 Order a Lab:
