--- a/templates/visit_past.html
+++ b/templates/visit_past.html
@@ -1,6 +1,6 @@
 {% extends "base_visit.html" %}
 {% block visitExtrahead %}
-<link href="/css/visit_past.css" rel="stylesheet" />
+<link href="/media/ocemr/css/visit_past.css" rel="stylesheet" />
 {% endblock %}
 {% block visitContent %}
 <DIV ID=pastVisits>
