Added Clinician Tally Report. Updated Tally Reports to provide CSV, direct display, or pie graphs.

--- a/templates/reports.html
+++ b/templates/reports.html
@@ -4,11 +4,9 @@
 {% block content %}
 <UL>
 <LI><A HREF="#" onClick='window.open("/reports/legacy/patient/daily","Get Legacy Daily Report","menubar=no,width=540,height=420,toolbar=no,scrollbars=yes");'>Legacy Daily Patient Report</A>
-<LI><A HREF="#" onClick='window.open("/reports/diagnosis/tally/","Get Daily Tally","menubar=no,width=540,height=420,toolbar=no,scrollbars=yes");'>Diagnosis Tally</A>
+<LI><A HREF="#" onClick='window.open("/reports/diagnosis/tally/","Get Daily Tally","menubar=no,width=540,height=420,toolbar=no,scrollbars=yes");'>Diagnosis Tally Report</A> - Updated
+<LI><A HREF="#" onClick='window.open("/reports/clinician/tally/","Clinician Daily Report","menubar=no,width=540,height=420,toolbar=no,scrollbars=yes");'>Clinician Tally Report</A> - New
 <LI><A HREF="#" onClick='window.open("/reports/cashflow/","Get Cashflow Report","menubar=no,width=540,height=420,toolbar=no,scrollbars=yes");'>Cashflow Report</A>
-{% comment %}
-<LI><A HREF="#" onClick='window.open("/reports/legacy/monthly/","Get Legacy Daily Report","menubar=no,width=540,height=420,toolbar=no,scrollbars=yes");'>Legacy Monthly Patient Report</A>
-{% endcomment %}
 <LI><A HREF="#" onClick='window.open("/reports/accounts_outstanding/","Show Outstanding Accounts","menubar=no,width=540,height=420,toolbar=no,scrollbars=yes");'>Outstanding Accounts</A>
 </UL>
 {% endblock %}
