Change header date to European Style. Change time to AM/PM Format.

--- a/templates/base.html
+++ b/templates/base.html
@@ -17,8 +17,8 @@ LANG: <A HREF=/user_prefs/>{{LANGUAGE_CODE}}</A>
 - <A HREF=/accounts/logout/>Logout</A>{% endif %}</DIV>
   </DIV> <!-- titlebar -->
   <DIV ID="header">
-    <DIV ID="headerLeft">{% now "F j Y" %}</DIV>
-    <DIV ID="headerRight">{% now "H:i" %}</DIV>
+    <DIV ID="headerLeft">{% now "j F Y" %}</DIV>
+    <DIV ID="headerRight">{% now "h:i A" %}</DIV>
   </div> <!-- header -->
   <DIV ID="extraHeader">
 
