--- a/templates/visit_labs.html
+++ b/templates/visit_labs.html
@@ -20,7 +20,7 @@ Order a Lab:
 	<TD>
 	    {% for ln in L.get_notes %}
 	    <DIV ID=labNote>
-		"{{ln.note}}" by {{ln.addedBy}} @{{ln.addedDateTime|date:"DATETIME_FORMAT"}}
+		"{{ln.note}}" by {{ln.addedBy}} @{{ln.addedDateTime|date:"SHORT_DATETIME_FORMAT"}}
 	    </DIV>
 	    {% endfor %}
 	<TD>{{L.result}}
