--- a/templates/popup_graphs_index.html
+++ b/templates/popup_graphs_index.html
@@ -4,7 +4,7 @@
 <a href="#" onClick='opener.window.location.reload();self.close();return false;'>Close</a>
 <IMG SRC=/graphs/vitals/{{id}}/bp.png>
 <IMG SRC=/graphs/vitals/{{id}}/temp.png>
-<IMG SRC=/graphs/vitals/{{id}}/bmi.png>
+<IMG SRC=/graphs/vitals/{{id}}/hw.png>
 <IMG SRC=/graphs/vitals/{{id}}/hrrr.png>
 <a href="#" onClick='opener.window.location.reload();self.close();return false;'>Close</a>
 {% endblock %}
