--- a/templates/visit_refe.html
+++ b/templates/visit_refe.html
@@ -6,8 +6,9 @@
 <A HREF="#" onClick='window.open("/visit/{{v.id}}/refe/new/","New Referral","menubar=no,width=540,height=420,toolbar=no,scrollbars=yes");'>Add a Referral</A>
 {% for r in referrals %}
 <DIV ID=referral>
-<SPAN ID=referralType>{{r.to}} (<A HREF="#" onClick='window.open("/visit/{{v.id}}/refe/edit/{{r.id}}","Edit Referral","menubar=no,width=540,height=420,toolbar=no,scrollbars=yes");'>edit</A>)</SPAN><BR>
-<SPAN ID=referralReason>{{r.reason}}</TEXTAREA><BR>
+<SPAN ID=referralTo>To: {{r.to}}
+(<A HREF="#" onClick='window.open("/visit/{{v.id}}/refe/edit/{{r.id}}","Edit Referral","menubar=no,width=540,height=420,toolbar=no,scrollbars=yes");'>edit</A>)</SPAN><BR>
+<SPAN ID=referralReason>Reason: {{r.reason}}</TEXTAREA><BR>
 <SPAN ID=referralByline>by {{r.addedBy}} on {{r.addedDateTime|date:"SHORT_DATETIME_FORMAT"}}</SPAN>
 </DIV> <!-- referral -->
 {% endfor %}
