fixed formatting of error pages

--- a/templates/500.html
+++ b/templates/500.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %}
+{% extends "base_error.html" %}
 {% load i18n %}
 
 {% block breadcrumbs %}<div class="breadcrumbs"><a href="/">{% trans "Home" %}</a> &rsaquo; {% trans "Server error" %}</div>{% endblock %}
