--- a/templates/base.html
+++ b/templates/base.html
@@ -5,6 +5,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <HEAD>
 <title>OCEMR: {% block title %}{% endblock %}</title>
+<link rel="shortcut icon" href="/media/ocemr/img/engeye-logo.ico" />
 <link href="/media/ocemr/css/base.css" rel="stylesheet" />
 {% block extrahead %}{% endblock %}
 </HEAD>
