--- a/templates/patient.html
+++ b/templates/patient.html
@@ -45,6 +45,18 @@
 	</TD>
 	<TD>{{p.email}}</TD>
 </TR>
+<TR>
+	<TD>Alternate Contact Name
+		<a href="#" onClick='window.open("/patient/edit/alt_contact_name/{{p.id}}/","Edit ","menubar=no,width=540,height=420,toolbar=no,scrollbars=yes");'>edit</a>
+	</TD>
+	<TD>{{p.altContactName}}</TD>
+</TR>
+<TR>
+	<TD>Alternate Contact Phone
+		<a href="#" onClick='window.open("/patient/edit/alt_contact_phone/{{p.id}}/","Edit ","menubar=no,width=540,height=420,toolbar=no,scrollbars=yes");'>edit</a>
+	</TD>
+	<TD>{{p.altContactPhone}}</TD>
+</TR>
 <TR><TD>Account Balance</TD>
 {% if p.isNegative %}
     <TD STYLE="color: RED;">
