add pulse oximetry and oxygen vitals
if pulse oximetry is measured on room air, either don't include the
percent oxygen reading or set it to zero.

Should the oxygen reading be called something different?

"Ventalation Oxygen percent".. dunno...

--- a/templates/popup_graphs_index.html
+++ b/templates/popup_graphs_index.html
@@ -6,5 +6,6 @@
 <IMG SRC=/graphs/vitals/{{id}}/temp.png>
 <IMG SRC=/graphs/vitals/{{id}}/hw.png>
 <IMG SRC=/graphs/vitals/{{id}}/hrrr.png>
+<IMG SRC=/graphs/vitals/{{id}}/spo2o2.png>
 <a href="#" onClick='opener.window.location.reload();self.close();return false;'>Close</a>
 {% endblock %}
