--- a/templates/visit_vacs.html
+++ b/templates/visit_vacs.html
@@ -2,12 +2,30 @@
 {% block visitExtrahead %}
 {% endblock %}
 {% block visitContent %}
-<UL>
     <A HREF=# onClick='window.open("/visit/{{v.id}}/vacs/new/","Add Vaccination","menubar=no,width=540,height=360,toolbar=no,scrollbars=yes");'>Add New</A>
+<TABLE>
 {% for v in vacs %}
-  <LI>{{v.type.title}}</LI><SPAN STYLE='background-color:#{% ifequal v.status "INP" %}FFFF55{% endifequal %}{% ifequal v.status "COM" %}55FF55{% endifequal %}{% ifequal v.status "CAN" %}55FF55{% endifequal %}'>
-	{{v.displayStatus}}</SPAN>
+<TR>
+	<TD>{{v.type.title}}
+	<TD STYLE='background-color:#{% ifequal v.status "COM" %}55FF55{% endifequal %}{% ifequal v.status "CAN" %}FF5555{% endifequal %}'>{{v.displayStatus}}
+	<TD>{{v.addedBy}}@{{v.addedDateTime}}
+	<TD>
+
+	<A href="#" onClick='window.open("/vac/{{v.id}}/notate/","Notate","menubar=no,width=540,height=360,toolbar=no,scrollbars=yes");'>Note</A>
+	|
+	{% ifequal v.status "COM" %}
+	<A HREF=# onClick='window.open("/vac/{{v.id}}/cancel/","Cancel","menubar=no,width=540,height=360,toolbar=no,scrollbars=yes");'>Cancel</A>
+	{% endifequal %}
+	{% ifequal v.status "CAN" %}
+	<A HREF=# onClick='window.open("/vac/{{v.id}}/undo_cancel/","Undo Cancel","menubar=no,width=540,height=360,toolbar=no,scrollbars=yes");'>Undo Cancel</A>
+	{% endifequal %}
+<TR><TD COLSPAN=4>
+	{% for n in v.get_notes %}
+		<DIV ID=vacNote>
+			"{{n.note}}" by {{n.addedBy}} @{{n.addedDateTime|date:"SHORT_DATETIME_FORMAT"}}
+		</DIV>
+	{% endfor %}
 {% endfor %}
-</UL>
+</TABLE>
 {% endblock %}
 
