--- a/templates/visit_vacs.html
+++ b/templates/visit_vacs.html
@@ -4,27 +4,25 @@
 {% block visitContent %}
     <A HREF=# onClick='window.open("/visit/{{v.id}}/vacs/new/","Add Vaccination","menubar=no,width=540,height=360,toolbar=no,scrollbars=yes");'>Add New</A>
 <TABLE>
-{% for v in vacs %}
-<TR>
-	<TD>{{v.type.title}}
-	<TD STYLE='background-color:#{% ifequal v.status "COM" %}55FF55{% endifequal %}{% ifequal v.status "CAN" %}FF5555{% endifequal %}'>{{v.displayStatus}}
-	<TD>{{v.addedBy}}@{{v.addedDateTime}}
+{% for vact,vac,vnotes in vacs %}
+<TR>	<!-- {{vact}} - {{vac}} -->
+	<TD>{{vact.title}}
+	<TD>{% if vac %}{{vac.receivedDate}}{% else %}--------{% endif %}
 	<TD>
 
-	<A href="#" onClick='window.open("/vac/{{v.id}}/notate/","Notate","menubar=no,width=540,height=360,toolbar=no,scrollbars=yes");'>Note</A>
-	|
-	{% ifequal v.status "COM" %}
-	<A HREF=# onClick='window.open("/vac/{{v.id}}/cancel/","Cancel","menubar=no,width=540,height=360,toolbar=no,scrollbars=yes");'>Cancel</A>
-	{% endifequal %}
-	{% ifequal v.status "CAN" %}
-	<A HREF=# onClick='window.open("/vac/{{v.id}}/undo_cancel/","Undo Cancel","menubar=no,width=540,height=360,toolbar=no,scrollbars=yes");'>Undo Cancel</A>
-	{% endifequal %}
-<TR><TD COLSPAN=4>
-	{% for n in v.get_notes %}
+	<A href="#" onClick='window.open("/vac/notate/{{p.id}}/{{vact.id}}/","Notate","menubar=no,width=540,height=360,toolbar=no,scrollbars=yes");'>Note</A>
+	{% if vac %}
+	| <A HREF=# onClick='window.open("/vac/edit_received/{{vac.id}}/","Change Received Date","menubar=no,width=540,height=360,toolbar=no,scrollbars=yes");'>Change Received Date</A>
+	| <A HREF=# onClick='window.open("/vac/del/{{p.id}}/{{vact.id}}/","Delete","menubar=no,width=540,height=360,toolbar=no,scrollbars=yes");'>Delete</A>
+	{% else %}
+	<A href="#" onClick='window.open("/vac/new/{{p.id}}/{{vact.id}}/","Add","menubar=no,width=540,height=360,toolbar=no,scrollbars=yes");'>Add</A>
+	{% endif %}
+<TR><TD COLSPAN=3>
+	{% if vnotes %}{% for n in vnotes %}
 		<DIV ID=vacNote>
 			"{{n.note}}" by {{n.addedBy}} @{{n.addedDateTime|date:"SHORT_DATETIME_FORMAT"}}
 		</DIV>
-	{% endfor %}
+	{% endfor %}{% endif %}
 {% endfor %}
 </TABLE>
 {% endblock %}
