Added merge village wizard to user_prefs page

--- a/templates/user_prefs.html
+++ b/templates/user_prefs.html
@@ -17,7 +17,7 @@
 {% if request.user.is_staff %}
 <H1>Staff Functions</H1>
 <UL>
-<LI> <A HREF=/merge_village_wizard/>Merge Village Wizard</A> - NEW
+<LI> <A HREF=# onClick='window.open("/village_merge_wizard/","Merge Village Wizard","menubar=no,width=540,height=420,toolbar=no,scrollbars=yes");'>Merge Village Wizard</A> - NEW
 <LI> <A HREF=/admin/>Data Admin Panel</A>
 <LI> <A HREF=/get_backup/>Backup the Database</A> Click this only once, and be patient!
 </UL>
