add link and url for new report

--- a/templates/reports.html
+++ b/templates/reports.html
@@ -4,6 +4,7 @@
 {% block content %}
 <UL>
 <LI><A HREF="#" onClick='window.open("/reports/legacy/patient/daily","Get Legacy Daily Report","menubar=no,width=540,height=420,toolbar=no,scrollbars=yes");'>Legacy Daily Patient Report</A>
+<LI><A HREF="#" onClick='window.open("/reports/diagnosis_patient","Get Diagnosis Patient Report","menubar=no,width=540,height=420,toolbar=no,scrollbars=yes");'>Diagnosis Patient Report</A> <b>*NEW*</b>
 <LI><A HREF="#" onClick='window.open("/reports/diagnosis/tally/","Get Daily Tally","menubar=no,width=540,height=420,toolbar=no,scrollbars=yes");'>Diagnosis Tally Report</A> 
 <LI><A HREF="#" onClick='window.open("/reports/lab/tally/","Lab Tally Report","menubar=no,width=540,height=420,toolbar=no,scrollbars=yes");'>Lab Tally Report</A>
 <LI><A HREF="#" onClick='window.open("/reports/med/tally/","Med Tally Report","menubar=no,width=540,height=420,toolbar=no,scrollbars=yes");'>Med Tally Report</A>
