--- a/templates/user_prefs.html
+++ b/templates/user_prefs.html
@@ -20,6 +20,7 @@
 <LI> <A HREF=# onClick='window.open("/village_merge_wizard/","Merge Village Wizard","menubar=no,width=540,height=420,toolbar=no,scrollbars=yes");'>Merge Village Wizard</A> - NEW
 <LI> <A HREF=/admin/>Data Admin Panel</A>
 <LI> <A HREF=/get_backup/>Backup the Database</A> Click this only once, and be patient!
+<LI> <A HREF=# onClick='window.open("/restore_backup/","Restore the Database","menubar=no,width=540,height=420,toolbar=no,scrollbars=yes");'>Restore the Database</A>
 </UL>
 {% endif %}
 </form>
