Revert most of the recent reporting changes

--- a/templates/base.html
+++ b/templates/base.html
@@ -31,6 +31,7 @@ LANG: <A HREF=/user_prefs/>{{LANGUAGE_CODE}}</A>
 	)
 	| {% menu_item /lab_queue/ "Lab Queue" request.path_info %}
 	| {% menu_item /med_queue/ "Med Queue" request.path_info %}
+	| {% menu_item /reports/ "Reports" request.path_info %}
 	| {% menu_item /user_prefs/ "User Prefs" request.path_info %}
 {% endblock %}
   </DIV> <!-- extraHeader -->
