add beginning of hmis105 report

--- a/templates/reports.html
+++ b/templates/reports.html
@@ -10,6 +10,7 @@
 <LI><A HREF="#" onClick='window.open("/reports/med/tally/","Med Tally Report","menubar=no,width=540,height=420,toolbar=no,scrollbars=yes");'>Med Tally Report</A>
 <LI><A HREF="#" onClick='window.open("/reports/clinician/tally/","Clinician Daily Report","menubar=no,width=540,height=420,toolbar=no,scrollbars=yes");'>Clinician Tally Report</A>
 <LI><A HREF="#" onClick='window.open("/reports/accounts_outstanding/","Show Outstanding Accounts","menubar=no,width=540,height=420,toolbar=no,scrollbars=yes");'>Outstanding Accounts</A>
+<LI><A HREF="#" onClick='window.open("/reports/hmis105/","HMIS Form 105","menubar=no,width=540,height=420,toolbar=no,scrollbars=yes");'>HMIS Form 105</A>
 </UL>
 {% endblock %}
 
