--- a/templates/base_popup.html
+++ b/templates/base_popup.html
@@ -4,6 +4,8 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <HEAD>
 <title>OCEMR Popup:{% block title %}{% endblock %}</title>
+<link rel="shortcut icon" href="/media/ocemr/img/engeye-logo.ico" />
+<link href="/media/ocemr/css/base.css" rel="stylesheet" />
 {% block extrahead %}{% endblock %}
 </HEAD>
 <BODY>
