--- a/ocemr/templates/reports.html
+++ b/ocemr/templates/reports.html
@@ -9,6 +9,7 @@
 <LI><A HREF="#" onClick='window.open("/reports/lab/tally/","Lab Tally Report","menubar=no,width=540,height=420,toolbar=no,scrollbars=yes");'>Lab Tally Report</A>
 <LI><A HREF="#" onClick='window.open("/reports/med/tally/","Med Tally Report","menubar=no,width=540,height=420,toolbar=no,scrollbars=yes");'>Med Tally Report</A>
 <LI><A HREF="#" onClick='window.open("/reports/clinician/tally/","Clinician Daily Report","menubar=no,width=540,height=420,toolbar=no,scrollbars=yes");'>Clinician Tally Report</A>
+<LI><A HREF="#" onClick='window.open("/reports/village/tally/","Village Tally Report","menubar=no,width=540,height=420,toolbar=no,scrollbars=yes");'>Village Tally Report</A>
 <LI><A HREF="#" onClick='window.open("/reports/accounts_outstanding/","Show Outstanding Accounts","menubar=no,width=540,height=420,toolbar=no,scrollbars=yes");'>Outstanding Accounts</A>
 <LI><A HREF="#" onClick='window.open("/reports/hmis105/","HMIS Form 105","menubar=no,width=540,height=420,toolbar=no,scrollbars=yes");'>HMIS Form 105</A>
 </UL>
