--- a/ocemr/templates/popup_graphs_index.html
+++ b/ocemr/templates/popup_graphs_index.html
@@ -2,10 +2,10 @@
 
 {% block content %}
 <a href="#" onClick='opener.window.location.reload();self.close();return false;'>Close</a>
-<IMG SRC=/graphs/vitals/{{id}}/bp.png>
-<IMG SRC=/graphs/vitals/{{id}}/temp.png>
-<IMG SRC=/graphs/vitals/{{id}}/hw.png>
-<IMG SRC=/graphs/vitals/{{id}}/hrrr.png>
-<IMG SRC=/graphs/vitals/{{id}}/spo2o2.png>
-<a href="#" onClick='opener.window.location.reload();self.close();return false;'>Close</a>
+<br><IMG SRC=/graphs/vitals/{{id}}/bp.png>
+<br><IMG SRC=/graphs/vitals/{{id}}/temp.png>
+<br><IMG SRC=/graphs/vitals/{{id}}/hw.png>
+<br><IMG SRC=/graphs/vitals/{{id}}/hrrr.png>
+<br><IMG SRC=/graphs/vitals/{{id}}/spo2o2.png>
+<br><a href="#" onClick='opener.window.location.reload();self.close();return false;'>Close</a>
 {% endblock %}
